--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,10 @@
 @import './components/header';
 @import './components/sidebar';
 @import './components/mainContent';
+@import './components/userscardcontainer';
+@import './components/infocard';
+@import './components/table';
+@import './components/modalContainer';
 
 // layout
 @import './layout/dashboard';
