--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -4,3 +4,18 @@ $secondary: #39cdcc;
 $tertiary: #213f7d;
 $background: #e5e5e541;
 $inputBorder: #545f7d;
+$fadedLine: #dededec3;
+
+$fadetertiary: #21407d1c;
+// app badge
+$active: #39cd62;
+$activeBg: #39cd6316;
+
+$pending: #e9b200;
+$pendingBg: #e9b3001b;
+
+$inactive: #545f7d;
+$inactiveBg: #545f7d1c;
+
+$blacklisted: #e4033b;
+$blacklistedBg: #e4033b1f;
