--- a/src/styles/components/_formInput.scss
+++ b/src/styles/components/_formInput.scss
@@ -32,6 +32,9 @@
 	}
 
 	select {
+		// width: 100%;
+		// height: 100%;
+		// border: none;
 		&:focus {
 			border: 1px solid $background;
 			box-shadow: none;
