--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -10,6 +10,7 @@
 		transform: translateX(-150%);
 		background-color: white;
 		transition: transform 1s ease-in-out;
+		z-index: 500;
 		&.active {
 			transform: translateX(0);
 		}
