--- a/src/styles/components/_table.scss
+++ b/src/styles/components/_table.scss
@@ -66,6 +66,7 @@
 				border-radius: 8px;
 				width: 100%;
 				color: $inputBorder;
+				// border: 2px solid green;
 			}
 
 			select {
@@ -152,6 +153,7 @@
 
 .table__pagination {
 	display: flex;
+	flex-flow: column;
 	justify-content: space-between;
 	align-items: center;
 	padding: 24px 0;
@@ -161,12 +163,12 @@
 		align-items: center;
 		gap: 10px;
 		p {
-			font-size: 14px;
+			font-size: 16px;
 		}
 	}
 	&--select {
 		width: 70px;
-		height: 30px;
+		height: 40px;
 		select {
 			width: 100%;
 			height: 100%;
@@ -179,9 +181,10 @@
 	}
 	&--ctrl {
 		display: flex;
+		margin-top: 2rem;
 		.btn {
-			width: 24px;
-			height: 24px;
+			width: 34px;
+			height: 34px;
 			border: none;
 			background-color: transparent;
 			// opacity: 0.6;
@@ -200,6 +203,37 @@
 			.active {
 				opacity: 1;
 				font-weight: 550;
+			}
+		}
+	}
+}
+
+// SMALL SCREENS
+@media (min-width: 640px) {
+	.table__pagination {
+		flex-flow: row;
+
+		&--size {
+		}
+		&--select {
+			width: 70px;
+			height: 30px;
+			select {
+				font-size: 14px;
+			}
+		}
+		&--ctrl {
+			margin-top: 0;
+			.btn {
+				img {
+				}
+			}
+			&--nos {
+				button {
+				}
+
+				.active {
+				}
 			}
 		}
 	}
