--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -5,6 +5,7 @@ $tertiary: #213f7d;
 $background: #e5e5e541;
 $inputBorder: #545f7d;
 $fadedLine: #dededec3;
+$gold: #e9b200;
 
 $fadetertiary: #21407d1c;
 // app badge
